--- a/graph.html
+++ b/graph.html
@@ -9,8 +9,10 @@
 
 <canvas id="fastCanvas" width="800" height="200" style="border: 1px solid black"></canvas>
 
-<canvas id="slowCanvas" width="800" height="400" style="border: 1px solid black"></canvas>
+<canvas id="slowCanvas" width="800" height="340" style="border: 1px solid black"></canvas>
 
+<br />
+<button onclick="window.location='index.html'; return false;">back</button>
     <script type="text/javascript">
 
       // Random data
